Search functionallity implemented, needs pictures to be consistent

--- a/assignments/pokedex/Levi-gen2-best/package.json
+++ b/assignments/pokedex/Levi-gen2-best/package.json
@@ -4,8 +4,8 @@
   "description": "pokedexApp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "webpack-dev-server"
+},
   "author": "",
   "license": "ISC",
   "devDependencies": {
