--- a/assignments/twitch/twitch_leviV2/package.json
+++ b/assignments/twitch/twitch_leviV2/package.json
@@ -25,11 +25,14 @@
     "react": "15.5.4",
     "react-dom": "15.5.4",
     "react-hot-loader": "3.0.0-beta.7",
+    "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "0.5.8",
     "webpack": "2.6.1",
     "webpack-dev-server": "2.4.5"
+  },
+  "dependencies": {
   }
 }
