--- a/assignments/twitch/twitch-sean/package.json
+++ b/assignments/twitch/twitch-sean/package.json
@@ -34,6 +34,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "helmet": "^3.12.0"
+    "helmet": "^3.12.0",
+    "react-router-dom": "^4.2.2",
+    "twitch-embed": "^1.1.4"
   }
 }
